# ss22v2b

./: .gitignore  Cargo.toml  README.md  config.example.toml  install.sh  ss22v2b.openrc  ss22v2b.openrc.confd  ss22v2b.service  ss22v2b@.service
.cargo/: config.toml
.github/workflows/: release.yml
crates/shadowsocks-service/src/: config.rs
crates/shadowsocks-service/src/local/net/tcp/: auto_proxy_stream.rs
crates/shadowsocks-service/src/local/net/udp/: association.rs
crates/shadowsocks-service/src/net/: flow.rs  mon_socket.rs  mon_stream.rs
crates/shadowsocks-service/src/server/: context.rs  server.rs  tcprelay.rs  udprelay.rs
crates/shadowsocks/src/: config.rs  context.rs
crates/shadowsocks/src/relay/tcprelay/: aead_2022.rs  crypto_io.rs  mod.rs  proxy_listener.rs
crates/shadowsocks/src/relay/tcprelay/proxy_stream/: client.rs  server.rs
crates/shadowsocks/src/relay/udprelay/: aead_2022.rs  options.rs
src/: config.rs  main.rs  server.rs
src/manager/: mod.rs  server.rs  tests.rs
src/v2board/: callback.rs  client.rs  mod.rs  models.rs  tests.rs
