[package]
name = "ss22v2b"
version = "0.2.1"
edition = "2024"
authors = ["Chenx Dust"]
repository = "https://github.com/chenx-dust/ss22v2b"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
reqwest = { version = "0.12.28", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.146"
shadowsocks-service = { version = "1.24.0", path = "./crates/shadowsocks-service", features = ["aead-cipher-2022", "server"] }
tokio = { version = "1.48.0", features = ["signal"] }
toml = "0.9.10"
bytes = "1.8.0"
